update post.router
